syntax = "proto3";

package pb;

option go_package = "github.com/frhnfrnk/simple-blog-platform/comment-service/pb;pb";


service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
  rpc GetComment(GetCommentRequest) returns (GetCommentResponse);
  rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc GetAllComments(GetAllCommentsRequest) returns (GetAllCommentsResponse);
}

message Comment {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
}

message CreateCommentRequest {
  string post_id = 1;
  string user_id = 2;
  string content = 3;
}

message CreateCommentResponse {
  Comment comment = 1;
}

message GetCommentRequest {
  uint32 id = 1;
}

message GetCommentResponse {
  Comment comment = 1;
}

message UpdateCommentRequest {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
}

message UpdateCommentResponse {
  Comment comment = 1;
}

message DeleteCommentRequest {
  string id = 1;
}

message DeleteCommentResponse {
  string message = 1;
}

message GetAllCommentsRequest {}

message GetAllCommentsResponse {
  repeated Comment comments = 1;
}
